GlyphScriptCompiler.IntegrationTests/TestData/SyntaxErrorExamples/invalidIdentifier.gs
ğŸ”¢ 123var = 5
ğŸ”¢ _var = 10
